Fixed a blank white space issue in iPad Pro view of FAQ page

--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ textarea {
     
 html {
   font-size: 16px;
+  background-color: #202322;
 }
     
 body {
